Added unit tests setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 /.vscode
 /CMakeFiles
 /CMakeCache.txt
+/CTestTestfile.cmake
 /cmake_install.cmake
 /Makefile
 /work
+/DartConfiguration.tcl
+/Testing
